--- a/userRegistration.html
+++ b/userRegistration.html
@@ -1,14 +1,18 @@
 <html>
 	<head>
+		<title> User Registration</title>
+		<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
-	<body><center>
-			<div align="center" style="margin-top:75px; border:1px solid black; width:350px; height:120px;">
+	<body>
+		<object type="text/html" data="header.html" width="1510px" height="70px"></object>
+		<center>
+			<div align="center" style="margin-top:15px; border:1px solid black; width:350px; height:220px;">
 		
-			CUSTOMER REGISTRATION <br>
-			NAME <input type="text" name="name"/> <br>
-			Email <input type="email" name="email" /> <br>
-			Contact Number <input type="number" name="number" /> <br>
-			Password <input type="text" name="password"/><br>
+			CUSTOMER REGISTRATION <br><br><br>
+			NAME: <input type="text" name="name"/> <br><br>
+			Email: <input type="email" name="email" /> <br><br>
+			Contact Number: <input type="text" name="number" /> <br><br>
+			Password: <input type="text" name="password"/><br><br>
 			<div>
 			</center>
 	</body>
