--- a/signuplogin.html
+++ b/signuplogin.html
@@ -16,10 +16,10 @@
 	<center>
 		<div style="height: 100px; width: 1500px;"> </div>
 		<font face="Perpetua">
-			<a href="userRegistration.html"> New User? </a>   or
-			<a href="merchantRegistration.html"> New Merchant? </a>
+			<a href="userRegistration.php"> New User? </a>   or
+			<a href="merchantRegistration.php"> New Merchant? </a>
 			<br>
-			<a href="login.html"> LogIn </a>
+			<a href="login.php"> LogIn </a>
 		</font>
 	</center>
 </body>
