--- a/headerlogout.html
+++ b/headerlogout.html
@@ -11,13 +11,13 @@
 <div class="hdr1">
 	<div class="icondiv">
 		<img src="img/icon.jpg" style="height: 45px; width: 45px;">
-		<a href="index.php" class="icon"> HOMEMADE </a>
+		<a href="index.html" class="icon"> HOMEMADE </a>
 	</div>
 	<div class="search" style="height: 48px; width: 900px; float: left">
 
 	</div>
 	<div class="signup" style="height: 36px; width: 170px; float: left;">	
-		<a href="signuplogin.html" class="signcart"> SignUp/LogIn </a>
+		<a href="logout.php" class="signcart"> Logout </a>
 	</div>
 	<div class="cart" style="height: 36px; width: 110px; float: left; ">
 		<a href="" class="signcart"> Cart </a>
