--- a/headerlogout.html
+++ b/headerlogout.html
@@ -20,7 +20,7 @@
 		<a href="logout.php" class="signcart"> Logout </a>
 	</div>
 	<div class="cart" style="height: 36px; width: 110px; float: left; ">
-		<a href="" class="signcart"> Cart </a>
+		<a href="cart.php" class="signcart"> Cart </a>
 	</div>
 </div>
 
