--- a/headerlogout.html
+++ b/headerlogout.html
@@ -10,7 +10,7 @@
 
 <div class="hdr1">
 	<div class="icondiv">
-		<img src="img/icon.jpg" style="height: 45px; width: 45px;">
+		<img src="img/homemadeicon.jpg" style="height: 45px; width: 45px;">
 		<a href="index.html" class="icon"> HOMEMADE </a>
 	</div>
 	<div class="search" style="height: 48px; width: 1000px; float: left">
