--- a/signuplogin.html
+++ b/signuplogin.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title> SignUp/Login </title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<style type="text/css">
 		a{
 			color: navy;
 			font-size: 24px;
+			text-decoration: underline;
 		}
 		body{
 			font-size: 24px;
@@ -18,7 +20,8 @@
 		<font face="Perpetua">
 			<a href="userRegistration.php"> New User? </a>   or
 			<a href="merchantRegistration.php"> New Merchant? </a>
-			<br>
+			<br>	
+			<br> * <br> <br>
 			<a href="login.php"> LogIn </a>
 		</font>
 	</center>
