--- a/headerlogout.html
+++ b/headerlogout.html
@@ -10,8 +10,8 @@
 
 <div class="hdr1">
 	<div class="icondiv">
-		<img src="img/homemadeicon.jpg" style="height: 45px; width: 45px;">
-		<a href="index.html" class="icon"> HOMEMADE </a>
+		<img src="img/homemadeicon.png" style="height: 45px; width: 45px;">
+		<a href="index.php" class="icon"> HOMEMADE </a>
 	</div>
 	<div class="search" style="height: 48px; width: 1000px; float: left">
 
