--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 	<object type="text/html" data="header.html" width="1510px" height="70px"></object>
 	<div class="outer">
+		<div class="innerall float">
 		<div class="innerhead"> Jewellery </div>
 		<div class="innermain">
 			<div class="innouter float">
@@ -71,6 +72,18 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	<div class="innerad float">
+		<div class="ad1">
+			<img src="img/adv1.png" class="" />
+		</div>
+		<div class="ad2">
+			<img src="img/adv2.jpg" class="ad2" />
+		</div>
+		<div class="ad1">
+			<a href="https://www.buzzfeed.com/anyagreenhalgh/order-some-late-night-food-and-well-tell-you-whic-3b6d9?utm_term=.egp5jMo9pA#.scmbEQjoDe" target="_blank"> <img src="img/adv3.png" class="ad1"> </a>
+		</div>
+	</div>
 </div>
 
 
