--- a/ring.html
+++ b/ring.html
@@ -1,12 +1,14 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css"  href="index.css">
+	<link rel="stylesheet" type="text/css"  href="ring.css">
 	<title> Rings </title>
 </head>
 <body>
 	<object type="text/html" data="header.html" width="1510px" height="70px"></object>
-	<form action="" method="post">
+	<form method="post">
 	<div class="outer">
+		<div class="outer">
+		<div class="innerall float">
 		<div class="innerhead"> Rings </div>
 		<div class="innermain">
 			<div class="innouter float">
@@ -30,6 +32,8 @@
 				<div class="inner1 font"> <a href="" class="font1"> Pearl ring, Rs. 500 </a> </div>
 				<div class="iner3"> <center> <input type="submit" name="addtocart" value="AddToCart" class="button"> </center> </div>
 			</div>
+		</div>
+		<div class="innermain">
 			<div class="innouter float">
 				<div class="inner2"> 
 					<img src="img/ringsinfinity.jpg" class="inner2">
@@ -52,7 +56,22 @@
 				<div class="iner3"> <center> <input type="submit" name="addtocart" value="AddToCart" class="button"> </center> </div>
 			</div>
 		</div>
+			<div class="innermain">
+			</div>
+		</div>
+		<div class="innerad float">
+		<div class="ad1">
+			<img src="img/adv1.png" class="" />
+		</div>
+		<div class="ad2">
+			<img src="img/adv2.jpg" class="ad2" />
+		</div>
+		<div class="ad1">
+			<a href="https://www.buzzfeed.com/anyagreenhalgh/order-some-late-night-food-and-well-tell-you-whic-3b6d9?utm_term=.egp5jMo9pA#.scmbEQjoDe" target="_blank"> <img src="img/adv3.png" class="ad1"> </a>
+		</div>
+	</div>
 </div>
+
 </form>
 </body>
 </html>
