--- a/bracelet.html
+++ b/bracelet.html
@@ -13,47 +13,48 @@
 		<div class="innermain">
 			<div class="innouter float">
 				<div class="inner2"> 
-					<img src="img/ring1.jpg" class="inner2">
+					<img src="img/ankletfloral.jpg" class="inner2">
 				</div>
-				<div class="inner1 font"> <a href="" class="font1"> Transparent ring, Rs. 80 </a> </div>
+				<div class="inner1 font"> <a href="" class="font1"> Floral anklet, Rs. 200 </a> </div>
 				<div class="iner3"> <center> <input type="submit" name="addtocart" value="AddToCart" class="button"> </center> </div>
 			</div>
 			<div class="innouter float">
 				<div class="inner2"> 
-					<img src="img/ringrose.jpg" class="inner2">
+					<img src="img/ankletinfinity.jpg" class="inner2">
 				</div>
-				<div class="inner1 font"> <a href="" class="font1"> Rose, Rs. 100 </a> </div>
+				<div class="inner1 font"> <a href="" class="font1"> Infinity anklet with pearls, Rs. 1000 </a> </div>
+				<br>
 				<div class="iner3"> <center> <input type="submit" name="addtocart" value="AddToCart" class="button"> </center> </div>
 			</div>
 			<div class="innouter float">
 				<div class="inner2"> 
-					<img src="img/ringpearl.jpg" class="inner2">
+					<img src="img/ankletsilver.jpg" class="inner2">
 				</div>
-				<div class="inner1 font"> <a href="" class="font1"> Pearl ring, Rs. 500 </a> </div>
+				<div class="inner1 font"> <a href="" class="font1"> Silver anklet, Rs.5000 </a> </div> <br>
 				<div class="iner3"> <center> <input type="submit" name="addtocart" value="AddToCart" class="button"> </center> </div>
 			</div>
 		</div>
+		<br>
 		<div class="innermain">
 			<div class="innouter float">
 				<div class="inner2"> 
-					<img src="img/ringsinfinity.jpg" class="inner2">
+					<img src="img/braceletgold.jpg" class="inner2">
 				</div>
-				<div class="inner1 font"> <a href="" class="font1"> Infinity ring, Rs. 100 </a> </div>
+				<div class="inner1 font"> <a href="" class="font1"> Gold bracelet, Rs. 1000 </a> </div> <br>
 				<div class="iner3"> <center> <input type="submit" name="addtocart" value="AddToCart" class="button"> </center> </div>
 			</div>
 			<div class="innouter float">
 				<div class="inner2"> 
-					<img src="img/ringsinter.jpg" class="inner2">
+					<img src="img/braceletrainbow.jpg" class="inner2">
 				</div>
-				<div class="inner1 font"> <a href="" class="font1"> Interlocked rings, Rs. 300 </a> </div>
+				<div class="inner1 font"> <a href="" class="font1"> Rainbow bracelet, Rs. 300 </a> </div>
 				<div class="iner3"> <center> <input type="submit" name="addtocart" value="AddToCart" class="button"> </center> </div>
 			</div>
 			<div class="innouter float">
 				<div class="inner2"> 
-					<img src="img/ringpearls.jpg" class="inner2">
+					
 				</div>
-				<div class="inner1 font"> <a href="" class="font1"> Pearl ring, Rs. 1000 </a> </div>
-				<div class="iner3"> <center> <input type="submit" name="addtocart" value="AddToCart" class="button"> </center> </div>
+				
 			</div>
 		</div>
 			<div class="innermain">
